# real_state_rest_api

./: README.md  pyproject.toml
src/: manage.py
src/advertisement/: models.py  serializers.py  urls.py  views.py
src/advertisement/domain/: model.py
src/advertisement/fixtures/: advertisements.json
src/advertisement/migrations/: 0001_initial.py  0002_remove_advertisement_id_and_more.py
src/booking/: models.py  serializers.py  urls.py  views.py
src/booking/domain/: model.py
src/booking/fixtures/: advertisements.json  bookings.json  properties.json
src/booking/migrations/: 0001_initial.py
src/core/booking/: model.py
src/property/: models.py  serializers.py  urls.py  views.py
src/property/domain/: __init__.py  model.py
src/property/fixtures/: properties.json
src/property/migrations/: 0001_initial.py
src/real_state_rest_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_real_state_rest_api.py
tests/unit/: test_booking.py
